[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "deegzlibs-event-bus"
version = "1.0.0"
description = "A small event bus with pluggable queue adapters (e.g. AWS SQS)"
readme = "README.md"
authors = ["Diego Alejos <lego.admin@gmail.com>"]
license = "MIT"
packages = [{include = "event_bus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0"
boto3 = {version = "*", optional = true}
pika = {version = ">=1.0", optional = true}
redis = {version = ">=4.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
commitizen = "^3.0.0"

[tool.poetry.extras]
sqs = ["boto3"]
rabbitmq = ["pika"]
redis = ["redis"]

[project]
name = "deegzlibs-event-bus"
version = "1.0.0"
description = "A small event bus with pluggable queue adapters and response stores (e.g. SQS, RabbitMQ, Redis, etc.)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diego Alejos", email = "lego.admin@gmail.com"}
]
keywords = ["event-bus", "event-driven", "queue", "sqs", "rabbitmq", "redis", "async", "pydantic"]
dependencies = [
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
[project.urls]
Homepage = "https://github.com/theD1360/deegzlibs-event-bus"
Repository = "https://github.com/theD1360/deegzlibs-event-bus"
Issues = "https://github.com/theD1360/deegzlibs-event-bus/issues"

[project.optional-dependencies]
sqs = ["boto3"]
rabbitmq = ["pika>=1.0"]
redis = ["redis>=4.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
